Display warning more prominently

--- a/README.org
+++ b/README.org
@@ -1,10 +1,9 @@
 #+TITLE: Intero layer
 
-*NOTE:* We now recommend using [[https://github.com/syl20bnr/spacemacs/tree/master/layers/%2Blang/haskell][Spacemacs haskell layer]], which now has support for intero, instead of this package.
+*IMPORTANT NOTE:* Spacemacs haskell layer now supports Intero on the develop branch: first try using that instead of this layer.
 
 * Description
-This layer adds [[http://commercialhaskell.github.io/intero/][Intero]] functionality on top of the Haskell layer. Spacemacs now
-supports Intero on the develop branch: try using that first.
+This layer adds [[http://commercialhaskell.github.io/intero/][Intero]] functionality on top of the Haskell layer. 
 
 * Install
 ** Layer
